is no set schedule for releases.

--TODO--

   +	Add ability to call ahead to a POP3 server to verify a user.
   	Problem: needs a user password to truly validate the user.
   	Suggested by Ryan Moore.

   +	Add support for :port specifier with host name or IP in RHS
   	of call-ahead-db records. Requested by Mark Hellegers.

--1.14.0--

  **	Configure and build fixes for SunOS.  Reported by warwick.ac.uk.

--1.13.3--

   !	More mxConnect() dialogue debug output.

--1.13.2--

   *	Requires LibSnert 1.75.31

   !	Fixed mxConnect() skipping of PDQ_SECTION_QUERY records.

--1.13.1--

   *	Requires LibSnert 1.75.22

   !	Fixed isReservedIP* macro changes.

--1.13--

   *	Requires LibSnert 1.75.8

   !	Configure and build changes to reflect changes in libsnert.

   !	Fixes for changes in the PDQ API introduced by libsnert 1.75.0.

--1.12--

   !	mxConnect: Switch to PDQ API.

   !	mxConnect: Replaced socketOpenClient with socketClient so as to
	handle multi-home hosts.

   -	Disable try-implicit-mx code. PDQ MX lookup handles this
	automatically.

   !	Fix Postfix issues concerning {client_name} and {client_addr}
   	always coming back NULL. Use smfProlog to save the client name
   	and address supplied to filterOpen in the workspace.

   +	Added -version and -info command options.

   +	Add special SMTP command "STAT milter-ahead" that reports some
   	basic process data. Can only be used from localhost for
   	security concerns. Appears to work only with sendmail and not
   	postfix.

   +	Updated documentation concerning "combo" tag support added in
   	libsnert.

   +	Removed ENABLE_BLACKLIST macros in favour of it	always being
	compiled in. The original argument to disable blacklisting was
	that sendmail already had its own mechanism; however libsnert
	milter support provides a richer syntax especially with the
	addition of combo tags. Also it makes documentation easier.

--1.11--

   !	filterRcpt: Fixed bug as a result of changes in libsnert 1.72.5