@@ -84,9 +84,9 @@ CFLAGS_SQLITE3	:= @CFLAGS_SQLITE3@
 LDFLAGS_SQLITE3	:= @LDFLAGS_SQLITE3@
 
 
-CFLAGS	:= ${CFLAGS_MILTER} ${CFLAGS_SQLITE3} ${CFLAGS_DB} ${CFLAGS_PTHREAD} @CFLAGS@
-LDFLAGS	:= ${LDFLAGS_MILTER} ${LDFLAGS_SQLITE3} ${LDFLAGS_DB} ${LDFLAGS_PTHREAD} @LDFLAGS@
-LIBS	:= @LIBS@ ${LIB_MILTER} ${LIB_SQLITE3} ${LIB_DB} ${LIB_SEM} ${LIB_PTHREAD} ${NETWORK_LIBS}
+CFLAGS	:= ${CFLAGS_SQLITE3} ${CFLAGS_DB} ${CFLAGS_MILTER} ${CFLAGS_PTHREAD} @CFLAGS@
+LDFLAGS	:= ${LDFLAGS_SQLITE3} ${LDFLAGS_DB} ${LDFLAGS_MILTER} ${LDFLAGS_PTHREAD} @LDFLAGS@
+LIBS	:= @LIBS@ ${LIB_SQLITE3} ${LIB_DB} ${LIB_SEM} ${LIB_MILTER} ${LIB_PTHREAD} ${NETWORK_LIBS}
 
 #######################################################################
 
